<resources>
    <string name="app_name">1–2-watch</string>
    <string name="liked">Liked</string>
    <string name="discover">Discover</string>
    <string name="home">Home</string>
    <string name="rating">Rating</string>
    <string name="movie_title">Movie Title</string>
    <string name="likedPage">Liked Page</string>
    <string name="_0_0">0.0</string>
    <string name="save">Save</string>
    <string name="media_item_poster_image">media item poster image</string>
    <string name="popular_anime">Popular Anime: </string>
    <string name="now_airing_tv_shows">Now Airing TV Shows: </string>
    <string name="latest_movies">Latest Movies: </string>
    <string name="related_movies">Related Movies: </string>
    <string name="related_tvShows">Related TV Shows: </string>
    <string name="related_anime">Related Anime: </string>
    <string name="play_icon">play_icon</string>
    <string name="liked_movies">Movies you follow</string>
    <string name="liked_tv_shows">Tv shows you follow</string>
    <string name="liked_anime">Anime you follow</string>
    <string name="go_back">Go back\n</string>
    <string name="title">title</string>
    <string name="empty_movies_list">You didn\'t like any Movie yet, please like a Movie and it will appear here.</string>
    <string name="empty_tv_shows_list">You didn\'t like any tv show yet, please like a TV Show and they will appear here.</string>
    <string name="empty_anime_list">You didn\'t like any Anime yet, please give an Anime a like and they will appear here.</string>
    <string name="more_info">more information\n</string>
    <string name="sand_clock">Sand Clock Icon</string>
    <string name="no_title_available">No Title Available</string>
    <string name="no_overview_available">No Overview Available</string>
    <string name="unknown">Unknown</string>
    <string name="no_providers_available">No providers available in this region.</string>
    <string name="error_fetching_providers">Error fetching providers.</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="description">Description: \n %1$s</string>
    <string name="release_date_n_a">Release Date: N/A</string>
    <string name="no_description">No Description</string>
    <string name="first_air_date">First Air Date: %1$s</string>
    <string name="last_air_date">Last Air Date: %1$s</string>
    <string name="next_episode_to_air">Next Episode to Air: %1$s</string>
    <string name="first_air_date_n_a">First Air Date: N/A</string>
    <string name="next_episode">Next episode: %1$s</string>
    <string name="start_date_n_a">Start Date: N/A</string>
    <string name="no_available_providers_in_your_region">No available providers in your region.</string>
    <string name="no_liked_movies">No liked movies to display</string>
    <string name="no_liked_tv_shows">No liked TV shows to display</string>
    <string name="no_liked_anime">No liked anime to display</string>
</resources>