<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailsActivity"
    android:background="@drawable/bg_transparent_rounded">

    <ImageButton
        android:id="@+id/goBackButton"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="14dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/go_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/detailsScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/providersRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/goBackButton">


        <LinearLayout
            android:id="@+id/detailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp">

                    <ImageView
                        android:id="@+id/movieImageView"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/media_item_poster_image"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="top|end"
                    android:layout_margin="8dp"
                    android:elevation="10dp"
                    android:background="@drawable/bg_transparent_rounded">

                    <ImageButton
                        android:id="@+id/saveButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/save"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_heart_outline" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_margin="8dp"
                    android:elevation="10dp"
                    android:background="@drawable/bg_transparent_rounded"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/thumbUpIcon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="4dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/rating"
                        android:src="@drawable/ic_thumb_up" />

                    <TextView
                        android:id="@+id/mediaRatingTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0_0"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:shadowColor="#000000"
                        android:layout_gravity="center"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:text="@string/title"
                android:textAlignment="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/nextReleaseLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                >
                <TextView
                    android:id="@+id/nextReleaseTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:textSize="18sp"
                    android:background="@drawable/bg_text"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    />

                <ImageView
                    android:id="@+id/sandClockView"
                    android:layout_width="49dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/sand_clock" />
                <TextView
                    android:id="@+id/nextReleaseDateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    />


            </LinearLayout>


            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:text="@string/first_air_date"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/endDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/runtimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/revenueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/budgetTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/episodeCountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/seasonCountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/genresTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:text="@string/description"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/noProvidersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:background="@drawable/bg_text"
                android:textAlignment="center"
                android:text="@string/no_providers_available"
                android:textSize="18sp"
                android:visibility="gone"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/providersRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/detailsScrollView"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:scrollbars="vertical" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_rounded"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>